file upadate with minor changes

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         <div class="main">
         <div class="inner">
       
-       <textarea rows="5" col="25" name="text_field" placeholder="Put your message here where you want to convert into banana language"></textarea>
+       <textarea rows="5" col="25" class="text_field" placeholder="Put your message here where you want to convert into banana language"></textarea>
        <br><button class="submit_button" name="button"> Translate to banana</button>  
     </div>
         <div class="output">
             <span class="output-heading"> Translated text will come here 👇</span>
-            <div class ="output-result"></div>
+            <div class="output-result"></div>
 
             
         </div>
@@ -35,6 +35,6 @@
             <p>Are you a fan of minions? Did you know that the gibberish they say is an actual language. Use the translator to convert your text from English to Minion speak or Banana language.</p>
 
         </footer>
-        <script src="" async defer></script>
+        <script src="index.js" ></script>
     </body>
 </html>
