--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title> Text to language convertor </title>
-        <meta name="description" content="">
+        <title> Banana Talk | Web App </title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="main.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
